sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:43: error: Unmatched closing brace '}' ignored here
 }
 ^AlgCocktailSort1:56: error: eof expected but '}' found.
}
^